non root saving took forever

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,13 @@ services:
   spotify-mp3-sync:
     build:
       context: .
+    user: 1000:1000
     environment:
       - DOTENV=true  # Ensures the .env is recognized
     env_file:
       - path: ./.env
     volumes:
-      - ./spotdl.config.json:/root/.spotdl/config.json
+      - ./spotdl.config.json:/config/.spotdl/config.json
       - /home/mele/storage/music:/app/music
       - ./.env:/app/.env
-    command: python main.py  # Replace with your script's entry point
+    command: python main.py
