sub_api progress - del playlist deletes all contents, spoticheck with 1 or more any song triggers a spotify sync

--- a/env.example
+++ b/env.example
@@ -1,5 +1,15 @@
-SPOTIFY_CLIENT_ID = <id>
-SPOTIFY_CLIENT_SECRET = <secret>
-SPOTIFY_REDIRECT_URI = <redirect>
-SPOTIFY_AUTHORIZATION_URL = <auth>
-NTFY_url = <ntfy>
+SPOTIFY_CLIENT_ID = <id> 69af4o20
+SPOTIFY_CLIENT_SECRET = <secret> b123abc
+SPOTIFY_REDIRECT_URI = <redirect> http://127.0.0.1:4200
+SPOTIFY_AUTHORIZATION_URL = <auth> http://127.0.0.1:4200/?code=asdfasdf
+NTFY_url = <ntfy> https://ntfy.domain.xyz/topic_name
+NTFY_USER = <user> user
+NTFY_PASSWORD = <pass> password123
+# subsonic api compat
+NAVI_URL = <url> navi.domain.xyz
+NAVI_PASS = <pass> drowssap321
+NAVI_USER = <user> resu
+SALT = <salt> a_salt_string_anything_really
+SUB_VER = <ver> 1.16.1
+SUB_C = <c> a_name_for_the_player_anything_really
+MUSIC_DIR = <dir> /home/user/storage/
