--- a/env.example
+++ b/env.example
@@ -6,7 +6,7 @@ NTFY_url = <ntfy> https://ntfy.domain.xyz/topic_name
 NTFY_USER = <user> user
 NTFY_PASSWORD = <pass> password123
 # subsonic api compat
-NAVI_URL = <url> navi.domain.xyz
+NAVI_URL = <url> navi.domain.xyz navi:4001
 NAVI_PASS = <pass> drowssap321
 NAVI_USER = <user> resu
 SALT = <salt> a_salt_string_anything_really
