--- a/compose.sub_api.yml
+++ b/compose.sub_api.yml
@@ -14,8 +14,9 @@ services:
     volumes:
       - ./py:/app
       - ./config/spotdl.config.json:/config/.spotdl/config.json
-      - /home/mele/storage/music:/app/music
+      - /home/debian/storage/music/audio:/app/music
       - ./config/.env:/app/.env
+      - ./config/spotify_playlists.json:/app/spotify_playlists.json
     command: python subsonic_reqs.py
 networks:
   caddy_network:
